adding home pages

--- a/Layout/Pajes/Home.html
+++ b/Layout/Pajes/Home.html
@@ -9,7 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="Content_Hume">
         <div class="navigation">
             <img src="https://w7.pngwing.com/pngs/750/193/png-transparent-computer-icons-shoe-project-sepatu-logo-monochrome-adidas.png" alt="">
 
@@ -28,75 +27,204 @@
             <div class="Slaider"></div>
         </div>
 
-        <h1>Топ товары</h1>
+        <h1>Категории</h1>
 
         <div class="Bloc2">
+            <div class="categories">
+                <div class="BoxCategories">
+                    <img src="https://w7.pngwing.com/pngs/750/193/png-transparent-computer-icons-shoe-project-sepatu-logo-monochrome-adidas.png" alt="">
+                    Кросовки
+                </div>
 
-            <div class="Box">
-                <div class="img_product">
-                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                <div class="BoxCategories">
+                    <img src="https://w7.pngwing.com/pngs/750/193/png-transparent-computer-icons-shoe-project-sepatu-logo-monochrome-adidas.png" alt="">
+                    Кросовки
                 </div>
-                <h3>Name</h3>
-                <div class="description">
-                    Text text text text text text text text text text ext
-                    text text text text text text text text
-                    ext text text text text text text text text
-                    ext text text text text text text text text
-                </div>
-            </div>
 
-            <div class="Box">
-                <div class="img_product">
-                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                <div class="BoxCategories">
+                    <img src="https://w7.pngwing.com/pngs/750/193/png-transparent-computer-icons-shoe-project-sepatu-logo-monochrome-adidas.png" alt="">
+                    Кросовки
                 </div>
-                <h3>Name</h3>
-                <div class="description">
-                    Text text text text text text text text text text ext
-                    text text text text text text text text
-                    ext text text text text text text text text
-                    ext text text text text text text text text
-                </div>
-            </div>
-            
-            <div class="Box">
-                <div class="img_product">
-                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
-                </div>
-                <h3>Name</h3>
-                <div class="description">
-                    Text text text text text text text text text text ext
-                    text text text text text text text text
-                    ext text text text text text text text text
-                    ext text text text text text text text text
-                </div>
-            </div>
 
-            <div class="Box">
-                <div class="img_product">
-                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                <div class="BoxCategories">
+                    <img src="https://w7.pngwing.com/pngs/750/193/png-transparent-computer-icons-shoe-project-sepatu-logo-monochrome-adidas.png" alt="">
+                    Кросовки
                 </div>
-                <h3>Name</h3>
-                <div class="description">
-                    Text text text text text text text text text text ext
-                    text text text text text text text text
-                    ext text text text text text text text text
-                    ext text text text text text text text text
-                </div>
-            </div>
 
-            <div class="Box">
-                <div class="img_product">
-                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                <div class="BoxCategories">
+                    <img src="https://w7.pngwing.com/pngs/750/193/png-transparent-computer-icons-shoe-project-sepatu-logo-monochrome-adidas.png" alt="">
+                    Кросовки
                 </div>
-                <h3>Name</h3>
-                <div class="description">
-                    Text text text text text text text text text text ext
-                    text text text text text text text text
-                    ext text text text text text text text text
-                    ext text text text text text text text text
+
                 </div>
-            </div>
         </div>
-    </div>
+
+        <h1>Топ товары</h1>
+
+        <div class="Bloc3">
+
+            <div class="Line">
+            <div class="Box">
+                <div class="img_product">
+                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                </div>
+                <h3>Name</h3>
+                <div class="description">
+                    Text text text text text text text text text text ext
+                    text text text text text text text text
+                    ext text text text text text text text text
+                    ext text text text text text text text text
+                </div>
+
+                <div class="buy">
+                    <div class="price"> 3000р</div>
+                    <button>Купить</button>
+                </div>
+            </div>
+
+            <div class="Box">
+                <div class="img_product">
+                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                </div>
+                <h3>Name</h3>
+                <div class="description">
+                    Text text text text text text text text text text ext
+                    text text text text text text text text
+                    ext text text text text text text text text
+                    ext text text text text text text text text
+                </div>
+
+                <div class="buy">
+                    <div class="price"> 3000р</div>
+                    <button>Купить</button>
+                </div>
+            </div>
+
+            <div class="Box">
+                <div class="img_product">
+                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                </div>
+                <h3>Name</h3>
+                <div class="description">
+                    Text text text text text text text text text text ext
+                    text text text text text text text text
+                    ext text text text text text text text text
+                    ext text text text text text text text text
+                </div>
+
+                <div class="buy">
+                    <div class="price"> 3000р</div>
+                    <button>Купить</button>
+                </div>
+            </div>
+
+            <div class="Box">
+                <div class="img_product">
+                    <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                </div>
+                <h3>Name</h3>
+                <div class="description">
+                    Text text text text text text text text text text ext
+                    text text text text text text text text
+                    ext text text text text text text text text
+                    ext text text text text text text text text
+                </div>
+
+                <div class="buy">
+                    <div class="price"> 3000р</div>
+                    <button>Купить</button>
+                </div>
+            </div>
+            </div>
+
+
+            <div class="Line">
+                <div class="Box">
+                    <div class="img_product">
+                        <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                    </div>
+                    <h3>Name</h3>
+                    <div class="description">
+                        Text text text text text text text text text text ext
+                        text text text text text text text text
+                        ext text text text text text text text text
+                        ext text text text text text text text text
+                    </div>
+
+                    <div class="buy">
+                        <div class="price"> 3000р</div>
+                        <button>Купить</button>
+                    </div>
+                </div>
+
+                <div class="Box">
+                    <div class="img_product">
+                        <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                    </div>
+                    <h3>Name</h3>
+                    <div class="description">
+                        Text text text text text text text text text text ext
+                        text text text text text text text text
+                        ext text text text text text text text text
+                        ext text text text text text text text text
+                    </div>
+
+                    <div class="buy">
+                        <div class="price"> 3000р</div>
+                        <button>Купить</button>
+                    </div>
+                </div>
+
+                <div class="Box">
+                    <div class="img_product">
+                        <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                    </div>
+                    <h3>Name</h3>
+                    <div class="description">
+                        Text text text text text text text text text text ext
+                        text text text text text text text text
+                        ext text text text text text text text text
+                        ext text text text text text text text text
+                    </div>
+
+                    <div class="buy">
+                        <div class="price"> 3000р</div>
+                        <button>Купить</button>
+                    </div>
+                </div>
+
+                <div class="Box">
+                    <div class="img_product">
+                        <img src="https://static.ecco.ru/images/eshop/img/jpg/bigw/780803_60118.jpg" alt="">
+                    </div>
+                    <h3>Name</h3>
+                    <div class="description">
+                        Text text text text text text text text text text ext
+                        text text text text text text text text
+                        ext text text text text text text text text
+                        ext text text text text text text text text
+                    </div>
+
+                    <div class="buy">
+                        <div class="price"> 3000р</div>
+                        <button>Купить</button>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="Bloc4">
+                <div class="Number">
+                    <h3> +7(999)999-99-99 </h3>
+                    <h3> telegram - @uidpers</h3>
+                </div>
+                <div class="pngDown">
+
+                  <img src="../png/123455.png" alt="">
+                    <img src="../png/1233.png" alt="">
+                    <img src="../png/12344.png" alt="">
+                <div/>
+            </div>
+
 </body>
 </html>
