--- a/Layout/Pajes/Bin.html
+++ b/Layout/Pajes/Bin.html
@@ -23,7 +23,84 @@
 
     <div class="ContentBin">
         <div class="BlocBin1">
+            <h1>Ваши товары</h1>
+        <div class="BinProduct">
+            <div class="product-wrap">
+                <div class="product-image">
+                    <a href=""><img src="../png/product.jpg"></a>
+                    <div class="shadow"></div>
+                    <div class="actions">
+                        <div class="actions-btn">
 
+                            <div class="add-to-links">
+
+                                <div class="add-to-compare">
+                                    <a class="add-to-compare-button" href="#" title="Добавить для сравнения"></a>
+                                </div>
+                                <div class="quikview">
+                                    <a class="quikview-button" href="#" title="Быстрый просмотр"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-list">
+                    <h3>Кросы Nike</h3>
+                    <div class="price">&#8381; 1999</div>
+                </div>
+
+            </div>
+            <div class="product-wrap">
+                <div class="product-image">
+                    <a href=""><img src="../png/product.jpg"></a>
+                    <div class="shadow"></div>
+                    <div class="actions">
+                        <div class="actions-btn">
+
+                            <div class="add-to-links">
+
+                                <div class="add-to-compare">
+                                    <a class="add-to-compare-button" href="#" title="Добавить для сравнения"></a>
+                                </div>
+                                <div class="quikview">
+                                    <a class="quikview-button" href="#" title="Быстрый просмотр"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-list">
+                    <h3>Кросы Nike</h3>
+                    <div class="price">&#8381; 1999</div>
+                </div>
+
+            </div>
+            <div class="product-wrap">
+                <div class="product-image">
+                    <a href=""><img src="../png/product.jpg"></a>
+                    <div class="shadow"></div>
+                    <div class="actions">
+                        <div class="actions-btn">
+
+                            <div class="add-to-links">
+
+                                <div class="add-to-compare">
+                                    <a class="add-to-compare-button" href="#" title="Добавить для сравнения"></a>
+                                </div>
+                                <div class="quikview">
+                                    <a class="quikview-button" href="#" title="Быстрый просмотр"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-list">
+                    <h3>Кросы Nike</h3>
+                    <div class="price">&#8381; 1999</div>
+                </div>
+
+            </div>
+        </div>
         </div>
 
         <div class="BlocBin2">
