--- a/Layout/Pajes/Home.html
+++ b/Layout/Pajes/Home.html
@@ -66,7 +66,7 @@
 
                 <div class="product-wrap">
                     <div class="product-image">
-                        <a href=""><img src="https://html5book.ru/wp-content/uploads/2015/10/black-dress.jpg"></a>
+                        <a href=""><img src="../png/product.jpg"></a>
                         <div class="shadow"></div>
                         <div class="actions">
                             <div class="actions-btn">
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="product-list">
-                        <h3>Маленькое черное платье</h3>
+                        <h3>Кросы Nike</h3>
                         <div class="price">&#8381; 1999</div>
                     </div>
 
@@ -96,7 +96,7 @@
 
                 <div class="product-wrap">
                     <div class="product-image">
-                        <a href=""><img src="https://html5book.ru/wp-content/uploads/2015/10/black-dress.jpg"></a>
+                        <a href=""><img src="../png/product.jpg"></a>
                         <div class="shadow"></div>
                         <div class="actions">
                             <div class="actions-btn">
@@ -118,14 +118,15 @@
                         </div>
                     </div>
                     <div class="product-list">
-                        <h3>Маленькое черное платье</h3>
+                        <h3>Кросы Nike</h3>
                         <div class="price">&#8381; 1999</div>
                     </div>
+
                 </div>
 
                 <div class="product-wrap">
                     <div class="product-image">
-                        <a href=""><img src="https://html5book.ru/wp-content/uploads/2015/10/black-dress.jpg"></a>
+                        <a href=""><img src="../png/product.jpg"></a>
                         <div class="shadow"></div>
                         <div class="actions">
                             <div class="actions-btn">
@@ -147,14 +148,15 @@
                         </div>
                     </div>
                     <div class="product-list">
-                        <h3>Маленькое черное платье</h3>
+                        <h3>Кросы Nike</h3>
                         <div class="price">&#8381; 1999</div>
                     </div>
+
                 </div>
 
                 <div class="product-wrap">
                     <div class="product-image">
-                        <a href=""><img src="https://html5book.ru/wp-content/uploads/2015/10/black-dress.jpg"></a>
+                        <a href=""><img src="../png/product.jpg"></a>
                         <div class="shadow"></div>
                         <div class="actions">
                             <div class="actions-btn">
@@ -176,9 +178,10 @@
                         </div>
                     </div>
                     <div class="product-list">
-                        <h3>Маленькое черное платье</h3>
+                        <h3>Кросы Nike</h3>
                         <div class="price">&#8381; 1999</div>
                     </div>
+
                 </div>
 
 
@@ -188,7 +191,7 @@
             <div class="Line">
                 <div class="product-wrap">
                     <div class="product-image">
-                        <a href=""><img src="https://html5book.ru/wp-content/uploads/2015/10/black-dress.jpg"></a>
+                        <a href=""><img src="../png/product.jpg"></a>
                         <div class="shadow"></div>
                         <div class="actions">
                             <div class="actions-btn">
@@ -210,14 +213,15 @@
                         </div>
                     </div>
                     <div class="product-list">
-                        <h3>Маленькое черное платье</h3>
+                        <h3>Кросы Nike</h3>
                         <div class="price">&#8381; 1999</div>
                     </div>
+
                 </div>
 
                 <div class="product-wrap">
                     <div class="product-image">
-                        <a href=""><img src="https://html5book.ru/wp-content/uploads/2015/10/black-dress.jpg"></a>
+                        <a href=""><img src="../png/product.jpg"></a>
                         <div class="shadow"></div>
                         <div class="actions">
                             <div class="actions-btn">
@@ -239,14 +243,15 @@
                         </div>
                     </div>
                     <div class="product-list">
-                        <h3>Маленькое черное платье</h3>
+                        <h3>Кросы Nike</h3>
                         <div class="price">&#8381; 1999</div>
                     </div>
+
                 </div>
 
                 <div class="product-wrap">
                     <div class="product-image">
-                        <a href=""><img src="https://html5book.ru/wp-content/uploads/2015/10/black-dress.jpg"></a>
+                        <a href=""><img src="../png/product.jpg"></a>
                         <div class="shadow"></div>
                         <div class="actions">
                             <div class="actions-btn">
@@ -268,14 +273,15 @@
                         </div>
                     </div>
                     <div class="product-list">
-                        <h3>Маленькое черное платье</h3>
+                        <h3>Кросы Nike</h3>
                         <div class="price">&#8381; 1999</div>
                     </div>
+
                 </div>
 
                 <div class="product-wrap">
                     <div class="product-image">
-                        <a href=""><img src="https://html5book.ru/wp-content/uploads/2015/10/black-dress.jpg"></a>
+                        <a href=""><img src="../png/product.jpg"></a>
                         <div class="shadow"></div>
                         <div class="actions">
                             <div class="actions-btn">
@@ -297,9 +303,10 @@
                         </div>
                     </div>
                     <div class="product-list">
-                        <h3>Маленькое черное платье</h3>
+                        <h3>Кросы Nike</h3>
                         <div class="price">&#8381; 1999</div>
                     </div>
+
                 </div>
             </div>
 
